Source/WebCore/platform/graphics/angle/GraphicsContextGLANGLE.cpp
@@ -311,33 +311,8 @@ void GraphicsContextGLOpenGL::getIntegerv(GCGLenum pname, GCGLint* value)
 
 void GraphicsContextGLOpenGL::getShaderPrecisionFormat(GCGLenum shaderType, GCGLenum precisionType, GCGLint* range, GCGLint* precision)
 {
-    UNUSED_PARAM(shaderType);
-    ASSERT(range);
-    ASSERT(precision);
-
     makeContextCurrent();
-
-    switch (precisionType) {
-    case GraphicsContextGL::LOW_INT:
-    case GraphicsContextGL::MEDIUM_INT:
-    case GraphicsContextGL::HIGH_INT:
-        // These values are for a 32-bit twos-complement integer format.
-        range[0] = 31;
-        range[1] = 30;
-        precision[0] = 0;
-        break;
-    case GraphicsContextGL::LOW_FLOAT:
-    case GraphicsContextGL::MEDIUM_FLOAT:
-    case GraphicsContextGL::HIGH_FLOAT:
-        // These values are for an IEEE single-precision floating-point format.
-        range[0] = 127;
-        range[1] = 127;
-        precision[0] = 23;
-        break;
-    default:
-        ASSERT_NOT_REACHED();
-        break;
-    }
+    gl::GetShaderPrecisionFormat(shaderType, precisionType, range, precision);
 }
 
 bool GraphicsContextGLOpenGL::texImage2D(GCGLenum target, GCGLint level, GCGLenum internalformat, GCGLsizei width, GCGLsizei height, GCGLint border, GCGLenum format, GCGLenum type, const void* pixels)
